src/sdk/.metadata/.plugins/org.eclipse.cdt.ui/montgomery_sw_project_broken.build.log
11:57:30 **** Incremental Build of configuration Debug for project montgomery_sw_project_broken ****
make all 
make[1]: Entering directory `/users/cosic/abeckers/ddp/2016-2017/work-packages/sw/ddp_sw/src/sdk/montgomery_sw_project_broken/Debug'
Building file: ../src/main.c
Invoking: ARM gcc compiler
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../montgomery_sw_project_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
In file included from /esat/micas-data/software/xilinx_vivado_2016.2/SDK/2016.2/gnu/arm/lin/arm-xilinx-eabi/include/sys/cdefs.h:43:0,
                 from /esat/micas-data/software/xilinx_vivado_2016.2/SDK/2016.2/gnu/arm/lin/arm-xilinx-eabi/include/stdio.h:35,
                 from ../src/main.c:48:
/esat/micas-data/software/xilinx_vivado_2016.2/SDK/2016.2/gnu/arm/lin/arm-xilinx-eabi/include/machine/_default_types.h:27:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'typedef'
 typedef __INT8_TYPE__ __int8_t;
 ^
In file included from /esat/micas-data/software/xilinx_vivado_2016.2/SDK/2016.2/gnu/arm/lin/lib/gcc/arm-xilinx-eabi/4.9.2/include/stdint.h:9:0,
                 from ../../montgomery_sw_project_bsp/ps7_cortexa9_0/include/xil_types.h:57,
                 from ../../montgomery_sw_project_bsp/ps7_cortexa9_0/include/xil_printf.h:11,
                 from ../src/main.c:50:
/esat/micas-data/software/xilinx_vivado_2016.2/SDK/2016.2/gnu/arm/lin/arm-xilinx-eabi/include/stdint.h:41:9: error: unknown type name '__int8_t'
 typedef __int8_t int8_t ;
         ^
make[1]: *** [src/main.o] Error 1
make[1]: Leaving directory `/users/cosic/abeckers/ddp/2016-2017/work-packages/sw/ddp_sw/src/sdk/montgomery_sw_project_broken/Debug'

11:57:31 Build Finished (took 162ms)

